# Terrestrial-Robot

./: .gitignore  README.md
description/: My Robot.urdf  RobotChasis_Phobos.blend
description/Terrestrial_Robot_Export_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
description/Terrestrial_Robot_Export_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
description/Terrestrial_Robot_Export_description/meshes/: MotorModel_BackLeft_1.stl  MotorModel_BackRight_1.stl  MotorModel_FrontLeft_1.stl  MotorModel_FrontRight_1.stl  MotorModel_v5_1_1.stl  MotorModel_v5__1__1.stl  MotorModel_v5__2__1.stl  MotorModel_v5__3__1.stl  MotorMount_BackLeft_1_1.stl  MotorMount_BackRight_1_1.stl  MotorMount_FrontLeft_1_1.stl  MotorMount_FrontRight_1.stl  Terrestrial_Robot_Wheel_v3_1.stl  Terrestrial_Robot_Wheel_v3__1__1.stl  Terrestrial_Robot_Wheel_v3__2__1_1.stl  Terrestrial_Robot_Wheel_v3__3__1_1.stl  Wheel_BackLeft_1.stl  Wheel_BackRight_1.stl  Wheel_FrontLeft_1.stl  Wheel_FrontRight_1.stl  base_link.stl
description/Terrestrial_Robot_Export_description/urdf/: Terrestrial_Robot_Export.gazebo  Terrestrial_Robot_Export.trans  Terrestrial_Robot_Export.xacro  materials.xacro
src/mecanum_controller/: CMakeLists.txt  mecanum_controller.xml  package.xml
src/mecanum_controller/include/mecanum_controller/: MecanumController.hpp  visibility_control.h
src/mecanum_controller/src/: MecanumController.cpp  mecanum_controller_parameters.yaml
src/mecanum_controller/test/: test_load_mecanum_controller.cpp
src/motorspeedcontroller/: CMakeLists.txt  package.xml
src/motorspeedcontroller/include/: utility.hpp
src/motorspeedcontroller/launch/: laserfollowingrobot_launch.py  quadmotor_launch.py
src/motorspeedcontroller/src/: DcMotorDriver.cpp  DriveInterface.cpp  MotorDriver.cpp  MotorSpeedHandler.cpp  SpeedPublisher.cpp
src/terrestrial_robot/: CMakeLists.txt  package.xml  terrestrial_robot.xml
src/terrestrial_robot/bringup/: controller.launch  real_ros_control.launch.py  ros2_control_startup.launch.py  sim_mecanum_control.launch.py  sim_ros_control.launch.py
src/terrestrial_robot/config/: controller.yaml  sim_controller.yaml  wheel_test.yaml  xbox.config.yaml
src/terrestrial_robot/description/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/terrestrial_robot/description/urdf/: .ros2_control_config.xacro.swp  Terrestrial_Robot_Export.gazebo  Terrestrial_Robot_Export.trans  Terrestrial_Robot_Export.xacro  gazebo_config.xacro  materials.xacro  real_ros2_control_config.xacro  ros2_control_config.xacro  sim_mecanum_config.xacro  sim_ros2_control_config.xacro  terrestrial_robot.xacro
src/terrestrial_robot/include/hardware/: BDC_LM298_SystemHardware.hpp  visibility_control.h
src/terrestrial_robot/src/hardware/: BDC_LM298_SystemHardware.cpp
src/terrestrial_robot_description/: package.xml  setup.cfg  setup.py
src/terrestrial_robot_description/launch/: display.launch.py  gazebo.launch.py
src/terrestrial_robot_description/meshes/: MotorModel_BackLeft_1.stl  MotorModel_BackRight_1.stl  MotorModel_FrontLeft_1.stl  MotorModel_FrontRight_1.stl  Wheel_BackLeft_1.stl  Wheel_BackRight_1.stl  Wheel_FrontLeft_1.stl  Wheel_FrontRight_1.stl  base_link.stl
src/terrestrial_robot_description/urdf/: materials.xacro  terrestrial_robot.gazebo  terrestrial_robot.trans  terrestrial_robot.xacro
